# pLIN-plasmid-classification

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  assign_pLIN.py  build_inc_centroids.py  create_architecture_pptx.py  docker-compose.yml  generate_figures.py  integrate_pLIN_AMR.py  launch_pLIN.bat  launch_pLIN.command  launch_pLIN.sh  manuscript_complete.md  manuscript_results.md  pLIN.ipynb  pLIN_executed.ipynb  plin_app.py  pyproject.toml  requirements-ml.txt  requirements.txt  run_all.bat  run_all.sh  run_amrfinder_all.sh  setup.bat  setup.sh  test_cladogram.py  test_integrate_and_cladogram.py  test_pLIN.py  train_nt_classifier.py
.streamlit/: config.toml
Data/: IncX_PLIN_thresholds_v0_python.yaml  IncX_like_seed_ORF_conservation_table.tsv  IncX_like_selected_plasmids.tsv  IncX_seed_top25_ORFs_aa.fasta  IncX_seed_top25_ORFs_nt.fasta  inc_centroids.npz
output/: pLIN_Tool_Architecture.pptx  pLIN_assignments.tsv
output/integrated/: pLIN_AMR_integrated.tsv  pLIN_lineage_AMR_summary.tsv
output/test/: test_pLIN_AMR_integrated.tsv  test_pLIN_assignments.tsv
test_plasmids/IncFII/: Presence_Absence.tsv  cgMLST.tsv  cgMLSTschema.txt  mdata_stats.tsv
test_plasmids/IncH/: Presence_Absence.tsv  cgMLST.tsv  cgMLSTschema.txt  mdata_stats.tsv
test_plasmids/IncX/: IncX3_JN247852.fasta  SP12_P2.fasta  SP13_P2.fasta  SP15_P3.fasta  SP16_P2.fasta  SP17_P3.fasta  SP19_P5.fasta  SP30_P3.fasta  SP42_P2.fasta  SP43_P6.fasta  SP44_P4.fasta  SP45_P4.fasta  SP46_P5.fasta  SP47_P4.fasta  SP48_P3.fasta  SP49_P4.fasta  SP4_P4.fasta  SP50_P4.fasta  (+4 more)
(+23 files in other folders)
